Fix extended reading source URLs

--- a/src/_data/reading_bundles.yml
+++ b/src/_data/reading_bundles.yml
@@ -7,12 +7,15 @@
         - author: "Google Cloud"
           title: "Five Best Practices for Using AI Coding Assistants"
           description: "Practical guidance on planning, breaking down work, and setting context before asking AI to generate code."
+          url: "https://cloud.google.com/blog/topics/developers-practitioners/five-best-practices-for-using-ai-coding-assistants"
         - author: "InfoQ"
           title: "Applying the PDCA Cycle to AI Code Generation"
           description: "An exploration of using a Plan-Do-Check-Act loop with AI, grounding AI-assisted coding in established engineering process discipline."
+          url: "https://www.infoq.com/articles/PDCA-AI-code-generation/"
         - author: "Graphite"
           title: "AI Pair Programming Best Practices"
           description: "A practitioner-oriented guide on how context, constraints, and expectations shape the usefulness of AI coding output."
+          url: "https://graphite.com/guides/ai-pair-programming-best-practices"
 
     - title: "Human Responsibility, Oversight, and Risk"
       description: "These sources examine what happens when AI accelerates implementation faster than human review and decision-making."
@@ -20,9 +23,11 @@
         - author: "TechRadar Pro"
           title: "AI Is Creating Code Faster—but Also More Security Issues"
           description: "A discussion of real-world risks that emerge when AI-generated code is adopted without sufficient design review or oversight."
+          url: "https://www.techradar.com/pro/ai-is-creating-code-faster-but-this-also-means-more-potential-security-issues"
         - author: "arXiv"
           title: "Human-Centered Practices for Responsible AI Development"
           description: "Research on how structured inputs, clear framing, and human supervision affect AI system behavior and reliability."
+          url: "https://arxiv.org/abs/2305.11248"
 
     - title: "Engineering Judgment and Skill Development"
       description: "These works are not about AI specifically. They explain how expertise develops and why reflective decision-making matters—principles that apply directly to planning-first workflows."
@@ -30,6 +35,8 @@
         - author: "Barry W. Boehm"
           title: "Software Engineering Economics"
           description: "A foundational text on why detecting problems earlier in the lifecycle is cheaper and more effective than fixing them later."
+          url: "https://www.cs.cmu.edu/~johnl/temple/18-749/papers/boehm1981.pdf"
         - author: "Ericsson et al."
           title: "The Role of Deliberate Practice in the Acquisition of Expert Performance"
           description: "Classic research on how expert judgment improves through focused, reflective practice rather than repetition alone."
+          url: "https://psycnet.apa.org/record/1993-40718-001"
