--- a/src/_data/citations.yml
+++ b/src/_data/citations.yml
@@ -13,3 +13,19 @@
 - id: ericsson_deliberate_practice_quote
   quote: 'Expert performance is the result of deliberate practice, which involves focused effort, feedback, and opportunities to correct errors.'
   source_id: ericsson_deliberate_practice
+
+- id: microsoft_ai_code_quote
+  quote: 'As much as 30% of Microsoft’s code is now written by AI.'
+  source_id: microsoft_ai_code_nypost
+
+- id: dora_ai_amplifier_quote
+  quote: 'AI is an amplifier of existing organizational capabilities—not a shortcut to bypass them.'
+  source_id: dora_ai_assisted_report
+
+- id: adtmag_human_review_quote
+  quote: '93% of technology leaders said AI-generated code undergoes human review before being integrated into production.'
+  source_id: adtmag_ai_coding_oversight
+
+- id: safe_ai_framework_quote
+  quote: 'Integration of LLMs into software engineering introduces risks such as insecure code generation, lack of transparency, and accountability gaps, requiring guardrails, sandboxing, runtime verification, and human-in-the-loop systems.'
+  source_id: arxiv_safe_ai_framework
